--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="box">
         </div>
         <div class="hero">
-            <span>Enjoy big movies, hit series and more from ₹ 149.</span>
+            <span>The biggest Indian hits. The best Indian stories.<br>All streaming here.</span>
             <span>Join today. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <div class="hero-buttons">
