--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-
+<body></body>
     <div class="main">
         <nav>
             <span><img width="53" src="assests/images/logo.svg" alt=""></span>
@@ -29,9 +28,7 @@
                 <button class="btn btn-red">Get Started &gt;</button>
             </div>
         </div>
-
         <div class="separation"></div>
-
     </div>
 
     <section class="first">
@@ -39,20 +36,18 @@
             <span>Enjoy on your TV</span>
             <span>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</span>
         </div>
-
         <div class="secImg">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
             <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-tv-in-0819.m4v"
                 autoplay loop muted></video>
         </div>
     </section>
+
     <div class="separation"></div>
 
     <section class="first second">
-
         <div class="secImg">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/mobile-0819.jpg" alt="">
-
         </div>
         <div>
             <span>Download your shows to watch offline</span>
@@ -66,7 +61,6 @@
             <span>Watch everywhere</span>
             <span>Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</span>
         </div>
-
         <div class="secImg">
             <img src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/tv.png" alt="">
             <video src="https://assets.nflxext.com/ffe/siteui/acquisition/ourStory/fuji/desktop/video-devices-in.m4v"
@@ -77,11 +71,9 @@
 
 
     <section class="first second">
-
         <div class="secImg">
             <img src="https://occ-0-2849-3646.1.nflxso.net/dnm/api/v6/19OhWN2dO19C9txTON9tvTFtefw/AAAABVr8nYuAg0xDpXDv0VI9HUoH7r2aGp4TKRCsKNQrMwxzTtr-NlwOHeS8bCI2oeZddmu3nMYr3j9MjYhHyjBASb1FaOGYZNYvPBCL.png?r=54d"
                 alt="">
-
         </div>
         <div>
             <span>Create profiles for kids</span>
@@ -128,7 +120,7 @@
         </div>
     </section>
     <div class="separation"></div>
-
+    
     <footer>
         <div class="questions">
             Questions? Call 000-800-919-1694
